--- a/samples/bookinfo/deploy/1.bookinfo-app.MD
+++ b/samples/bookinfo/deploy/1.bookinfo-app.MD
@@ -1,6 +1,6 @@
 ## Bookinfo Application 
 
-![Bookinfo Application](./imgs/applications.png)
+![Bookinfo Application](../imgs/applications.png)
 
 - The `productpage` microservice calls the `details` and `reviews` microservices to populate the page.
 - The `details` microservice contains book information.
@@ -17,4 +17,5 @@
 ```shell
 # kubectl create ns bookinfo
 # kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -n bookinfo
+# kubectl get pod -n bookinfo
 ```
