--- a/samples/bookinfo/deploy/2.bookinfo-istio.MD
+++ b/samples/bookinfo/deploy/2.bookinfo-istio.MD
@@ -75,6 +75,13 @@ https://github.com/istio/istio/releases/tag/1.14.1
 # export SECURE_INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="https")].port}')
 
 # export GATEWAY_URL=$INGRESS_HOST:$INGRESS_PORT
+
+# kubernetes without LB
+# export INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="http2")].nodePort}')
+# export SECURE_INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="https")].nodePort}')
+# export TCP_INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="tcp")].nodePort}')
+
+# export GATEWAY_URL=<work-node-ip>:$INGRESS_PORT
 ```
 
 ## Verify external access
