Init handle signal

--- a/module1/5.Threads/5.1-Handle-Signal.md
+++ b/module1/5.Threads/5.1-Handle-Signal.md
@@ -14,18 +14,30 @@
 ### 1. init 进程：shell(SIGKILL -> 缺省, SIGTERM -> 忽略)
 
 ```shell
-# docker run --name app-shell -d registry/init-handle-signal:shell
-# docker exec -it app-shell sh
+# docker run --name shell-app -d init-handle-signal:shell
+# docker exec -it shell-app sh
 / # ps -ef
-xxx
+PID   USER     TIME  COMMAND
+    1 root      0:00 /bin/sh ./run.sh
+    6 root      0:00 ./init-handle-signal
+   13 root      0:00 sh
+   19 root      0:00 ps -ef
 
 / # kill -9 1
 / # ps -ef
-xxx
+PID   USER     TIME  COMMAND
+    1 root      0:00 /bin/sh ./run.sh
+    6 root      0:00 ./init-handle-signal
+   13 root      0:00 sh
+   19 root      0:00 ps -ef
 
 / # kill 1
 / # ps -ef
-xxx
+PID   USER     TIME  COMMAND
+    1 root      0:00 /bin/sh ./run.sh
+    6 root      0:00 ./init-handle-signal
+   13 root      0:00 sh
+   19 root      0:00 ps -ef
 ```
 
 **_kill -9 信号量(SIGKILL)无法被正确处理，kill 信号量(SIGTERM)无法被正确处理_**
@@ -33,20 +45,20 @@ xxx
 ### 2. init 进程：golang(SIGKILL -> 缺省, SIGTERM -> 捕获)
 
 ```shell
-# docker run --name app-java -d goharbor.com/demo/discovery-service:java
-# docker exec -it app-java sh
+# docker run --name golang-app -d init-handle-signal:golang
+# docker exec -it golang-app sh
 / # ps -ef
 PID   USER     TIME  COMMAND
-    1 root      0:44 java -jar /discovery-service.jar
-   47 root      0:00 sh
-   54 root      0:00 ps -ef
+    1 root      0:00 ./init-handle-signal
+   14 root      0:00 sh
+   20 root      0:00 ps -ef
 
 / # kill -9 1
 / # ps -ef
 PID   USER     TIME  COMMAND
-    1 root      0:44 java -jar /discovery-service.jar
-   47 root      0:00 sh
-   54 root      0:00 ps -ef
+    1 root      0:00 ./init-handle-signal
+   14 root      0:00 sh
+   20 root      0:00 ps -ef
 
 / # kill 1
 / # %
@@ -61,19 +73,11 @@ PID   USER     TIME  COMMAND
 # docker run --name app-tini -d goharbor.com/demo/discovery-service:tini
 # docker exec -it app-tini sh
 / # ps -ef
-PID   USER     TIME  COMMAND
-    1 root      0:00 /tini -- java -jar /discovery-service.jar
-    7 root      0:23 java -jar /discovery-service.jar
-   23 root      0:00 sh
-   29 root      0:00 ps -ef
+xxx
 
 / # kill -9 1
 / # ps -ef
-PID   USER     TIME  COMMAND
-    1 root      0:00 /tini -- java -jar /discovery-service.jar
-    7 root      0:23 java -jar /discovery-service.jar
-   23 root      0:00 sh
-   29 root      0:00 ps -ef
+xxx
 
 / # kill 1
 / # %
