--- a/module1/5.Threads/5.2-Child-Handle-Signal.md
+++ b/module1/5.Threads/5.2-Child-Handle-Signal.md
@@ -68,3 +68,15 @@ fwd-sig
 - 自定义处理：信号被处理函数捕获，执行自定义操作 signal(SIGTERM, custom_handler)
 
 ### 解决：解决的方法就是在容器的 init 进程中对收到的信号做个转发，发送到容器中的其他子进程，这样容器中的所有进程在停止时，都会收到 SIGTERM，而不是 SIGKILL 信号了
+
+[root@yonsuite-hw-online-10-166-50-207 pod0df91a9b-b143-48b6-acb5-c74f8e84bb7a]# cat cpu.shares
+1228
+[root@yonsuite-hw-online-10-166-50-207 pod0df91a9b-b143-48b6-acb5-c74f8e84bb7a]# cat cpu.cfs_quota_us
+600000
+
+[root@yonsuite-hw-online-10-166-50-207 poddd0c5d0b-186b-4888-8422-d0c5785dc51a]# cat cpu.cfs_quota_us
+400000
+[root@yonsuite-hw-online-10-166-50-207 poddd0c5d0b-186b-4888-8422-d0c5785dc51a]# cat cpu.shares
+819
+
+limit.cpu 分配的越大，竞争 CPU 资源的概率就越大
