--- a/module1/7.Disk/7.3-Limit-Blkio.md
+++ b/module1/7.Disk/7.3-Limit-Blkio.md
@@ -56,6 +56,8 @@ Starting 1 process
   - blkio.throttle.read_bps_device
   - blkio.throttle.write_iops_device
   - blkio.throttle.write_bps_device
+  - blkio 在 Cgroups v1 里不能限制 Buffered I/O
+  - blkio 在 Cgroups v2 里可以限制 Buffered I/O
 
 ```shell
 # blkio.throttle.read_bps_device blkio.throttle.write_bps_device 设置为 1M
